--- a/examples/Routers/index.html
+++ b/examples/Routers/index.html
@@ -10,7 +10,7 @@
 <body>
   <a href="/red">红色</a>
   <a href="/green">绿色</a>
-  <a href="/bluu">蓝色</a>
+  <a href="/blue">蓝色</a>
 
   <script>
     const route = new Routes();
